# Heficience-menu

./: .gitignore  AppImageBuilder.yml  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt-save  Makefile  README.md  cmake_install.cmake  dvkbuntu-easy-menu-qt  dvkbuntu-easy-menu-qt.cbp  install  main.cpp  mainwindow.h  options.ui
.github/workflows/: main.yml
Calculator/: index.html
Calculator/scripts/: script.js
Calculator/styles/: dark.css  light.css
Linux/: AppImageBuilder.yml
Windows/: Setup-dvkbuntu-easy-menu-qt.iss  Setup-heficience-menu-qt.iss
dvkbuntu-easy-menu-qt_autogen/: moc_predefs.h  mocs_compilation.cpp
dvkbuntu-easy-menu-qt_autogen/UVLADIE3JM/: moc_controlmenu.cpp  moc_controlmenumail.cpp  moc_controlmenumain.cpp  moc_mainwindow.cpp  moc_options.cpp  qrc_resource.cpp
dvkbuntu-easy-menu-qt_autogen/include/: ui_controlmenu.h  ui_controlmenumail.h  ui_controlmenumain.h  ui_options.h
macOS/: EasyMenu_Icone.icns  Heficience_Icone.icns  Info.plist  icons.icns
macOS/Installateur/: .LICENSE.rtf  .dvkbuntu-easy-menu.sh  .heficience-menu.sh
src/: controlmenu.cpp  controlmenu.ui  controlmenucalc.cpp  controlmenucalc.h  controlmenucalc.ui  controlmenudiscord.cpp  controlmenudiscord.h  controlmenudiscord.ui  controlmenumail.cpp  controlmenumail.h  controlmenumail.ui  controlmenumain.cpp  controlmenumain.h  controlmenumain.ui  controlmenumusic.cpp  controlmenumusic.h  controlmenumusic.ui  controlmenuoffice.cpp  controlmenuoffice.h  controlmenuoffice.ui  controlmenuweb.cpp  controlmenuweb.h  controlmenuweb.ui  dvkbuntu-easy-menu.desktop  heficience-menu.desktop  icon.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mywebenginepage.cpp  mywebenginepage.h  options.cpp  options.h  options.ui  resource.qrc
